 -commons-logging 1.0.4
 -jcommon 1.0.0
 -jfreechart 1.0.1
 -jnt.FFT
 -log4j 1.2.13
 -looks 2.0.1
 -tritonus_share 0.3.6
-Remove xerces jars and code dependencies.
-Update chart code because of API change in JFreeChart.
-Move build.properties to version.properties.
-Generate build information and embedded in jar.
-Update Version.java to use build information.
-Change jar target to be standalone.
-Jar files are optimized with proguard
-Added ant target to create windows exe from jar with launch4j.

1.2.0 - June 21, 2005
-Added command line option (-s or --time-scale) to set the time scale
-Added tabular data panel
-Fix text data panel
-Hide hidden channels by default. Add option to view menu.
-Enable dynamic layout during application resize
-Refactor entire code base to new package structure
-Create data panel interface for dynamic loading and registration via an xml
 configuration file
-Add error dialog when connection to RBNB server fails
-Added queue for state change requests, should fix a few issues with lost state
 changes
-Correctly cleanup data panels when connecting to another server while viewing
 data
-Made the location bar not jump around when a drag is finished and large amounts
 of data are being fetched
-Made the string data panel only accept string data and throw out anything else
-Fixed issue when data panels would clear in RT mode when adding channels
-Notify time listeners when they are added as this doesn't seem to break things
 andy more
-Let the window manager choose the location of the frame
-Hard code the initial size of the window to 800x600
-Tweak the channel list show/hide/resize code to work in a more consistent
 manner
-Fixed bug in J2RE's < 1.5 that would hang the application on exit
-Fix bug when RT mode would not work in rare cases

1.1.0 - March 22, 2005
-Expanded domain slider to include usecond and day time values
-Improved channel list to keep expansion and selection state on refresh